--- a/css/style.css
+++ b/css/style.css
@@ -109,12 +109,71 @@ header .col .main-menu .menu-wrapper .menu-item:hover::before {
           transform-origin: left;
 }
 
+header .col .main-menu .menu-wrapper .menu-item:hover .sub-menu {
+  display: block;
+}
+
 header .col .main-menu .menu-wrapper .get-started:before {
   display: none;
 }
 
+header .col .main-menu .menu-wrapper .sub-menu {
+  display: none;
+  position: absolute;
+  top: 36px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
+  padding: 18px 12px;
+  width: 260px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+header .col .main-menu .menu-wrapper .sub-menu::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -1.4rem;
+  left: -0.75rem;
+  height: calc(100% + 2rem);
+  width: calc(100% + 1.5rem);
+}
+
+header .col .main-menu .menu-wrapper .sub-menu .sub-menu-item {
+  position: relative;
+  padding: 14px 16px;
+  border-radius: 6px;
+  margin-top: .75rem;
+}
+
+header .col .main-menu .menu-wrapper .sub-menu .sub-menu-item .title {
+  text-transform: capitalize;
+  font-size: .95rem;
+  font-weight: 600;
+  margin-bottom: 7px;
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(50%, #282b30), color-stop(0, #febe3c)) !important;
+  background-image: linear-gradient(90deg, #282b30 50%, #febe3c 0) !important;
+  background-size: 200%;
+  background-position-x: 100%;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+
+header .col .main-menu .menu-wrapper .sub-menu .sub-menu-item .content {
+  color: #7a7a7a;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+header .col .main-menu .menu-wrapper .sub-menu .sub-menu-item:first-child {
+  background: #00bc871a;
+  margin-top: 0;
+}
+
 section {
-  background-color: #ebebeb;
+  background-color: #fbfbfb;
   width: 100%;
   height: 700px;
 }
