--- a/css/style.scss
+++ b/css/style.scss
@@ -82,11 +82,62 @@ header {
                             transform: scaleX(1);
                             transform-origin: left;
                         }
+                        .sub-menu {
+                            display: block;
+                        }
                     }
                 }
                 .get-started {
                     &:before {
                         display: none;
+                    }
+                }
+
+                .sub-menu {
+                    display: none;
+                    position: absolute;
+                    top: 36px;
+                    background-color: #fff;
+                    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
+                    padding: 18px 12px;
+                    width: 260px;
+                    border-radius: 6px;
+                    cursor: pointer;
+                    &::before {
+                        content: "";
+                        display: block;
+                        position: absolute;
+                        top: -1.4rem;
+                        left: -0.75rem;
+                        height: calc(100% + 2rem);
+                        width: calc(100% + 1.5rem);
+                    }
+                    .sub-menu-item {
+                        position: relative;
+                        padding: 14px 16px;
+                        border-radius: 6px;
+                        margin-top: .75rem;
+                        .title {
+                            text-transform: capitalize;
+                            font-size: .95rem;
+                            font-weight: 600;
+                            margin-bottom: 7px;
+                            background-image: linear-gradient(90deg,#282b30 50%,#febe3c 0)!important;
+                            background-size: 200%;
+                            background-position-x: 100%;
+                            -webkit-text-fill-color: transparent;
+                            -webkit-background-clip: text;
+                        }
+                        .content {
+                            color: #7a7a7a;
+                            font-size: 0.875rem;
+                            font-weight: 500;
+                            line-height: 22px;
+                        }
+                        &:first-child {
+                            background: #00bc871a;
+                            margin-top: 0;
+                        }
                     }
                 }
             }
@@ -95,7 +146,7 @@ header {
 }
 
 section {
-    background-color: #ebebeb;
+    background-color: #fbfbfb;
     width: 100%;
     height: 700px;
 }
