--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,7 @@ body, a, button {
 .wrapper {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 44px;
+    padding: 0 20px;
 }
 
 header {
@@ -21,16 +21,27 @@ header {
         align-items: center;
     }
     .col {
-        .logo {
-            height: 3.4375rem;
+        &.logo {
+            img {
+                height: 3.4375rem;
+            }
         }
-        .main-menu {
+        
+        &.menu {
+            @media screen and (max-width: 980px) {
+                display: none;
+            }
             .menu-wrapper {
                 display: flex;
                 align-items: center;
                 .menu-item {
                     position: relative;
                     margin-left: 1.5rem;
+                    // responsive
+                    @media screen and (max-width: 1130px) {
+                        margin-left: 1rem;
+                    }
+
                     a {
                         display: flex;
                         text-transform: capitalize;
@@ -40,6 +51,10 @@ header {
                         color: #000;
                         ion-icon {
                             margin-left: 6px;
+                        }
+
+                        @media screen and (max-width: 1130px) {
+                            font-size: 0.85rem;
                         }
                     }
                     .btn {
@@ -87,7 +102,7 @@ header {
                         }
                     }
                 }
-                .get-started {
+                .book {
                     &:before {
                         display: none;
                     }
@@ -100,7 +115,7 @@ header {
                     background-color: #fff;
                     box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
                     padding: 18px 12px;
-                    width: 260px;
+                    width: 280px;
                     border-radius: 6px;
                     cursor: pointer;
                     &::before {
@@ -119,10 +134,10 @@ header {
                         margin-top: .75rem;
                         .title {
                             text-transform: capitalize;
-                            font-size: .95rem;
+                            font-size: 0.875rem;
                             font-weight: 600;
                             margin-bottom: 7px;
-                            background-image: linear-gradient(90deg,#282b30 50%,#febe3c 0)!important;
+                            background-image: linear-gradient(90deg,#00bc87 50%,#282b30 0)!important;
                             background-size: 200%;
                             background-position-x: 100%;
                             -webkit-text-fill-color: transparent;
@@ -130,14 +145,35 @@ header {
                             transition: .4s;
                         }
                         .content {
-                            color: #7a7a7a;
-                            font-size: 0.875rem;
+                            color: #282b30;
+                            font-size: 0.8125rem;
                             font-weight: 500;
-                            line-height: 22px;
+                            line-height: 20px;
+                            opacity: .55;
                         }
-                        &:first-child {
+                        &:nth-child(1) {
                             background: #00bc871a;
                             margin-top: 0;
+                        }
+                        &:nth-child(2) {
+                            .title {
+                                background-image: linear-gradient(90deg,#282b30 50%,#00bc87 0)!important;
+                            }
+                        }
+                        &:nth-child(3) {
+                            .title {
+                                background-image: linear-gradient(90deg,#282b30 50%,#febe3c 0)!important;
+                            }
+                        }
+                        &:nth-child(4) {
+                            .title {
+                                background-image: linear-gradient(90deg,#282b30 50%,#64cffe 0)!important;
+                            }
+                        }
+                        &:nth-child(5) {
+                            .title {
+                                background-image: linear-gradient(90deg,#282b30 50%,#576ee7 0)!important;
+                            }
                         }
                         &:hover {
                             .title {
@@ -145,6 +181,41 @@ header {
                             }
                         }
                     }
+                }
+            }
+        }
+
+        &.mobile {
+            display: none;
+            // responsive
+            @media screen and (max-width: 980px) {
+                display: block;
+            }
+
+            button {
+                display: flex;
+                align-items: center;
+                border: none;
+                background: none;
+                cursor: pointer;
+                ion-icon {
+                    font-size: 2rem;
+                }
+                .close {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    &.active {
+        .mobile {
+            button {
+                .open {
+                    display: none;
+                }
+                .close {
+                    display: block;
                 }
             }
         }
